# tree-sitter-lean

./: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tree_sitter_lean/: __init__.py
bindings/rust/: lib.rs
