[package]
name = "tree-sitter-lean"
description = "Tree sitter parser to the Lean4 theorem prover"
version = "0.1.0"
authors = ["Gabrielle <you@gabx.io>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lean"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/aripiprazole/tree-sitter-lean"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
